temporary fix for too big screen

--- a/living-diamond/main.css
+++ b/living-diamond/main.css
@@ -35,6 +35,8 @@ html {
     width: 100vmin;
     height: 100vmin;
     /* background-color: black; */
+    max-width: 1000px;
+    max-height: 1000px;
 }
 
 .sketchcontainer canvas {
